--- a/sprint-1/16-flexbox-grid/food-site/index.html
+++ b/sprint-1/16-flexbox-grid/food-site/index.html
@@ -23,7 +23,7 @@
     <nav>
     <div class="container">
         <ul id="top-nav">
-            <li>Home</li>
+            <li>Home Home</li>
             <li>Menu</li>
             <li>Food</li>
             <li>More</li>
