--- a/sprint-1/15-html-css/demos_html-css_final/food/menu.html
+++ b/sprint-1/15-html-css/demos_html-css_final/food/menu.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Food Site</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <div id="header-content" class="container">
-            <img src="images/logo.jpg" alt="">
+            <img src="/images/logo.jpg" alt="">
             <div id="header-search">
                 <input type="text">
                 <button>
-                    <img src="images/search-icon-white.png" alt="">
+                    <img src="/images/search-icon-white.png" alt="">
                 </button>
             </div>
         </div>
@@ -33,27 +33,8 @@
     </nav> 
 
     <section class="container breadcrumb">
-    Home >> food >> <span id="current-page">salad</span>
+    Home >> food >> <span id="current-page">menu</span>
     </section>
 
-    <main class="container">
-        <img id="hero" src="images/salad.jpg" alt="">
-
-        <div> 
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Eius distinctio deserunt fuga aliquid perferendis, architecto 
-            natus suscipit debitis adipisci error ipsum aliquam culpa aut 
-            animi cupiditate qui sint vitae quae.
-        </div>
-
-        <div class="footer">
-            Content footer
-        </div>
-
-    </main>
-
-    <h2 class="container footer">
-        &copy; 2020 <span style="color: black;">Vege</span>lite Food Site
-    </h2>
 </body>
 </html>
