added demo code

--- a/sprint-2/10-DOM/demos_final/it-tasks/index.html
+++ b/sprint-2/10-DOM/demos_final/it-tasks/index.html
@@ -20,6 +20,7 @@
     <div id="todos" class="todo-list">
         <div class="header" id="task-header"></div>
     </div>
+    <button class="btn-complete" onclick="completeHighPriority()">COMPLETE HIGH PRIORITY ITEMS</button>
     
 </body>
 </html>
