--- a/sprint-3/09-javascript-and-apis/demo_client-web-app_starter/products.html
+++ b/sprint-3/09-javascript-and-apis/demo_client-web-app_starter/products.html
@@ -13,7 +13,7 @@
     <script src="js/config.js"></script>
     <script src="js/services/categories-service.js"></script>
     <script src="js/services/products-service.js"></script>
-    <script src="js/pages/products.js"></script>
+    <script src="js/pages/products-page.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -30,7 +30,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Products
-                        <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
             </ul>
@@ -47,12 +46,9 @@
 
 </main>
 
-<template id="category-template">
-    <div class="card category-card">
-        <div id="category-header" class="card-header"></div>
-        <div id="category-body" class="card-body">
-            <img id="category-image">
-        </div>
+<template id="product-template">
+    <div class="card product-card">
+        <div id="product-header" class="card-header"></div>
         <div class="card-footer">
             <div id="delete-button" class="btn btn-link">delete</div>
         </div>
